--- a/app/src/main/res/layout/chatbot_msg_rv_item.xml
+++ b/app/src/main/res/layout/chatbot_msg_rv_item.xml
@@ -10,7 +10,7 @@
     app:cardCornerRadius="8dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="horizontal">
 
@@ -21,7 +21,6 @@
             android:src="@drawable/ic_chatbot">
 
         </ImageView>
-
 
 
         <TextView
