--- a/app/src/main/res/layout/chatbot_msg_rv_item.xml
+++ b/app/src/main/res/layout/chatbot_msg_rv_item.xml
@@ -31,7 +31,8 @@
             android:layout_margin="5dp"
             android:padding="3dp"
             android:text="Bot Message"
-            android:textColor="@color/white">
+            android:textColor="@color/white"
+            android:textIsSelectable="true">
 
         </TextView>
 
