--- a/app/src/main/res/layout/user_msg_rv_item.xml
+++ b/app/src/main/res/layout/user_msg_rv_item.xml
@@ -18,18 +18,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="User Message"
+            android:textColor="@color/white"
+            android:textColorHint="@color/black"
             android:id="@+id/idRVUser"
             android:layout_gravity="center"
-            android:textColor="@color/white"
             android:layout_margin="5dp"
-            android:padding="3dp">
+            android:padding="3dp"
+            android:textIsSelectable="true">
 
         </TextView>
 
         <ImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_user"
+            android:src="@drawable/ic_question"
             android:layout_margin="10dp">
 
         </ImageView>
