--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,8 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="back_color">#13253D</color>
-    <color name="bot_back_color">#203757</color>
-    <color name="user_back_color">#6965FF</color>
-    <color name="fab_color">#6B6AFF</color>
+    <color name="back_color">#5900A2</color>
+    <color name="bot_back_color">#BE0101</color>
+    <color name="user_back_color">#01BE21</color>
+    <color name="fab_color">#0170BE</color>
 </resources>
