--- a/app/src/main/res/layout/chatbot_msg_rv_item.xml
+++ b/app/src/main/res/layout/chatbot_msg_rv_item.xml
@@ -12,7 +12,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:animateLayoutChanges="true"
+        android:background="@drawable/edit_text">
 
         <ImageView
             android:layout_width="38dp"
