--- a/app/src/main/res/layout/user_msg_rv_item.xml
+++ b/app/src/main/res/layout/user_msg_rv_item.xml
@@ -13,6 +13,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="@drawable/edit_text"
+        android:animateLayoutChanges="true"
         >
         <TextView
             android:layout_width="wrap_content"
