--- a/app/src/main/res/layout/chatbot_msg_rv_item.xml
+++ b/app/src/main/res/layout/chatbot_msg_rv_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="start"
     android:layout_margin="5dp"
     android:elevation="8dp"
@@ -12,29 +12,31 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:orientation="horizontal"
         android:animateLayoutChanges="true"
-        android:background="@drawable/edit_text">
+        android:background="@drawable/edit_text"
+        android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_margin="5dp"
-            android:src="@drawable/ic_chatbot">
+            android:src="@drawable/ic_chatbot_color">
 
         </ImageView>
 
 
         <TextView
             android:id="@+id/idRVBot"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:fontFamily="sans-serif-medium"
             android:padding="3dp"
             android:text="Bot Message"
             android:textColor="@color/white"
-            android:textIsSelectable="true">
+            android:textIsSelectable="true"
+            android:textSize="15dp">
 
         </TextView>
 
