--- a/app/src/main/res/layout/user_msg_rv_item.xml
+++ b/app/src/main/res/layout/user_msg_rv_item.xml
@@ -1,40 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="end"
     android:layout_margin="5dp"
-    app:cardBackgroundColor="@color/user_back_color"
     android:elevation="8dp"
+    app:cardBackgroundColor="@color/user_back_color"
     app:cardCornerRadius="8dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@drawable/edit_text"
         android:animateLayoutChanges="true"
-        >
+        android:background="@drawable/edit_text"
+        android:orientation="horizontal">
+
         <TextView
+            android:id="@+id/idRVUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            android:fontFamily="sans-serif-medium"
+            android:padding="3dp"
             android:text="User Message"
             android:textColor="@color/white"
             android:textColorHint="@color/black"
-            android:id="@+id/idRVUser"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            android:padding="3dp"
-            android:textIsSelectable="true">
+            android:textIsSelectable="true"
+            android:textSize="15dp">
 
         </TextView>
 
         <ImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:src="@drawable/ic_question"
-            android:layout_margin="5dp">
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="5dp"
+            android:src="@drawable/ic_user_color">
 
         </ImageView>
 
