--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,10 +41,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/edit_text_border"
+            android:ellipsize="end"
             android:fontFamily="sans-serif-medium"
             android:hint="Enter message"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
+            android:paddingRight="50dp"
             android:paddingBottom="20dp"
             android:singleLine="true"
             android:textColor="@color/white"
