--- a/app/src/main/res/drawable/edit_text.xml
+++ b/app/src/main/res/drawable/edit_text.xml
@@ -4,31 +4,31 @@
     <item android:state_focused="true">
         <shape android:shape="rectangle">
             <padding
-                android:left="4dp"
-                android:top="4dp"
-                android:right="4dp"
-                android:bottom="4dp"
+                android:left="@dimen/_4sdp"
+                android:top="@dimen/_4sdp"
+                android:right="@dimen/_4sdp"
+                android:bottom="@dimen/_4sdp"
                 />
 
             <gradient android:startColor="#00c4c7a9" android:endColor="#00d6dadf" android:angle="270" />
 
-            <stroke android:width="10px" android:color="@color/black" />
-            <corners android:radius="4dp" />
+            <stroke android:width="@dimen/_2sdp" android:color="@color/black" />
+            <corners android:radius="@dimen/_4sdp" />
         </shape>
     </item>
 
     <item android:state_focused="false">
         <shape android:shape="rectangle">
             <padding
-                android:left="4dp"
-                android:top="4dp"
-                android:right="4dp"
-                android:bottom="4dp"
+                android:left="@dimen/_4sdp"
+                android:top="@dimen/_4sdp"
+                android:right="@dimen/_4sdp"
+                android:bottom="@dimen/_4sdp"
                 />
 
             <gradient android:startColor="#00c4c7a9" android:endColor="#00d6dadf" android:angle="270" />
-            <stroke  android:width="10px" android:color="@color/black" />
-            <corners android:radius="4dp" />
+            <stroke  android:width="@dimen/_2sdp" android:color="@color/black" />
+            <corners android:radius="@dimen/_4sdp" />
 
         </shape>
     </item>
