--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,10 +20,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/idRVChats"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-
-        />
+        android:layout_height="match_parent" />
 
 
     <RelativeLayout
@@ -31,9 +28,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingBottom="5dp">
+        android:paddingLeft="@dimen/_5sdp"
+        android:paddingTop="@dimen/_5sdp"
+        android:paddingRight="@dimen/_5sdp"
+        android:paddingBottom="@dimen/_5sdp">
 
 
         <EditText
@@ -44,15 +42,15 @@
             android:ellipsize="end"
             android:fontFamily="sans-serif-medium"
             android:hint="Enter message"
-            android:paddingLeft="10dp"
-            android:paddingTop="10dp"
-            android:paddingRight="50dp"
-            android:paddingBottom="20dp"
+            android:paddingLeft="@dimen/_10sdp"
+            android:paddingTop="@dimen/_10sdp"
+            android:paddingRight="@dimen/_50sdp"
+            android:paddingBottom="@dimen/_20sdp"
             android:singleLine="true"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textIsSelectable="true"
-            android:textSize="20dp"
+            android:textSize="@dimen/_15sdp"
             android:textStyle="italic">
 
 
@@ -62,19 +60,20 @@
             android:id="@+id/idFABSend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
+            android:scaleType="fitXY"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginStart="5dp"
-
-            android:layout_marginRight="-3dp"
+            android:layout_marginStart="@dimen/_5sdp"
+            android:padding="0dp"
+            android:layout_marginRight="@dimen/_minus3sdp"
             android:backgroundTint="@color/fab_color"
             android:src="@drawable/ic_send"
             android:tint="@color/black"
-            app:fabCustomSize="45dp">
+            app:fabCustomSize="@dimen/_40sdp"
+            app:maxImageSize = "@dimen/_24sdp"
+            app:borderWidth="0dp">
 
         </com.google.android.material.floatingactionbutton.FloatingActionButton>
-
 
     </RelativeLayout>
 
