--- a/app/src/main/res/layout/user_msg_rv_item.xml
+++ b/app/src/main/res/layout/user_msg_rv_item.xml
@@ -10,11 +10,20 @@
     app:cardCornerRadius="8dp">
 
     <LinearLayout
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:animateLayoutChanges="true"
         android:background="@drawable/edit_text"
         android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="@dimen/_50sdp"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_margin="@dimen/_5sdp"
+            android:src="@drawable/ic_user_color">
+
+        </ImageView>
 
         <TextView
             android:id="@+id/idRVUser"
@@ -23,22 +32,15 @@
             android:layout_gravity="center"
             android:layout_margin="5dp"
             android:fontFamily="sans-serif-medium"
-            android:padding="3dp"
+            android:padding="@dimen/_3sdp"
             android:text="User Message"
             android:textColor="@color/white"
-            android:textColorHint="@color/black"
             android:textIsSelectable="true"
-            android:textSize="15dp">
+            android:textSize="@dimen/_15sdp">
+            >
 
         </TextView>
 
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_margin="5dp"
-            android:src="@drawable/ic_user_color">
-
-        </ImageView>
 
     </LinearLayout>
 
